--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "@types/node": "12.7.8",
     "@types/react": "16.9.4",
     "@types/react-dom": "16.9.1",
+    "@types/react-router": "^5.1.1",
+    "@types/react-router-dom": "^5.1.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
     "typescript": "3.6.3"
   },
